force-app/main/default/objects/BGCK__Answer_Type__c/BGCK__Answer_Type__c.object-meta.xml
<CustomObject>
    <label>Option</label>
    <nameField>
        <label>Internal Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>