force-app/main/default/objects/BGCK__Answer_Type__c/fields/BGCK__Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Actual_Value__c</fullName>
    <description>1. In checklist admin page, set actual value in Answer Type is required. 
2. In Question Checklist page,  when saving answer record, save this actual value to the answer record.</description>
    <label>Displayed Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>