force-app/main/default/objects/BGCK__Answer_Type__c/fields/BGCK__Maximum_Length__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Maximum_Length__c</fullName>
    <label>Maximum Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>