force-app/main/default/objects/BGCK__Answer_Type__c/fields/BGCK__Order__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>