force-app/main/default/objects/BGCK__Answer_Type__c/fields/BGCK__Tip__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Tip__c</fullName>
    <label>Tip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>