force-app/main/default/objects/BGCK__Answer_Type__c/listViews/BGCK__All.listView-meta.xml
<ListView>
    <fullName>BGCK__All</fullName>
    <columns>NAME</columns>
    <columns>BGCK__Actual_Value__c</columns>
    <columns>BGCK__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>